--- a/BuildingYourDeepNeuralNetwork_StepbyStep.ipynb
+++ b/BuildingYourDeepNeuralNetwork_StepbyStep.ipynb
@@ -89,7 +89,7 @@
     "    - Stack [LINEAR->RELU] backward L-1 times and add [LINEAR->SIGMOID] backward in a new L_model_backward function\n",
     "- Finally update the parameters.\n",
     "\n",
-    "<img src=\"images/final_outline.png\" style=\"width:800px;height:500px;\">\n",
+    "<img src=\"https://raw.githubusercontent.com/jeffreyrnorton/Notebooks_MachineLearning/master/images/final_outline.png\" style=\"width:800px;height:500px;\">\n",
     "<caption><center> **Figure 1**</center></caption><br>\n",
     "\n",
     "\n",
@@ -662,7 +662,7 @@
     "\n",
     "For even more convenience when implementing the $L$-layer Neural Net, you will need a function that replicates the previous one (`linear_activation_forward` with RELU) $L-1$ times, then follows that with one `linear_activation_forward` with SIGMOID.\n",
     "\n",
-    "<img src=\"images/model_architecture_kiank.png\" style=\"width:600px;height:300px;\">\n",
+    "<img src=\"https://raw.githubusercontent.com/jeffreyrnorton/Notebooks_MachineLearning/master/images/model_architecture_kiank.png\" style=\"width:600px;height:300px;\">\n",
     "<caption><center> **Figure 2** : *[LINEAR -> RELU] $\\times$ (L-1) -> LINEAR -> SIGMOID* model</center></caption><br>\n",
     "\n",
     "**Exercise**: Implement the forward propagation of the above model.\n",
@@ -860,7 +860,7 @@
     "Just like with forward propagation, you will implement helper functions for backpropagation. Remember that back propagation is used to calculate the gradient of the loss function with respect to the parameters. \n",
     "\n",
     "**Reminder**: \n",
-    "<img src=\"images/backprop_kiank.png\" style=\"width:650px;height:250px;\">\n",
+    "<img src=\"https://raw.githubusercontent.com/jeffreyrnorton/Notebooks_MachineLearning/master/images/backprop_kiank.png\" style=\"width:650px;height:250px;\">\n",
     "<caption><center> **Figure 3** : Forward and Backward propagation for *LINEAR->RELU->LINEAR->SIGMOID* <br> *The purple blocks represent the forward propagation, and the red blocks represent the backward propagation.*  </center></caption>\n",
     "\n",
     "<!-- \n",
@@ -891,7 +891,7 @@
     "\n",
     "Suppose you have already calculated the derivative $dZ^{[l]} = \\frac{\\partial \\mathcal{L} }{\\partial Z^{[l]}}$. You want to get $(dW^{[l]}, db^{[l]} dA^{[l-1]})$.\n",
     "\n",
-    "<img src=\"images/linearback_kiank.png\" style=\"width:250px;height:300px;\">\n",
+    "<img src=\"https://raw.githubusercontent.com/jeffreyrnorton/Notebooks_MachineLearning/master/images/linearback_kiank.png\" style=\"width:250px;height:300px;\">\n",
     "<caption><center> **Figure 4** </center></caption>\n",
     "\n",
     "The three outputs $(dW^{[l]}, db^{[l]}, dA^{[l]})$ are computed using the input $dZ^{[l]}$.Here are the formulas you need:\n",
@@ -1172,7 +1172,7 @@
     "Now you will implement the backward function for the whole network. Recall that when you implemented the `L_model_forward` function, at each iteration, you stored a cache which contains (X,W,b, and z). In the back propagation module, you will use those variables to compute the gradients. Therefore, in the `L_model_backward` function, you will iterate through all the hidden layers backward, starting from layer $L$. On each step, you will use the cached values for layer $l$ to backpropagate through layer $l$. Figure 5 below shows the backward pass. \n",
     "\n",
     "\n",
-    "<img src=\"images/mn_backward.png\" style=\"width:450px;height:300px;\">\n",
+    "<img src=\"https://raw.githubusercontent.com/jeffreyrnorton/Notebooks_MachineLearning/master/images/mn_backward.png\" style=\"width:450px;height:300px;\">\n",
     "<caption><center>  **Figure 5** : Backward pass  </center></caption>\n",
     "\n",
     "** Initializing backpropagation**:\n",
