--- a/GCP_mlapis.ipynb
+++ b/GCP_mlapis.ipynb
@@ -7,7 +7,9 @@
     "editable": true
    },
    "source": [
-    "# Google Cloud Platform - Using Machine Learning APIs  \n",
+    "# Google Cloud Platform - Using Machine Learning APIs  ).\n",
+    "\n",
+    "This is an upgraded Python revision of [this notebook](https://github.com/GoogleCloudPlatform/training-data-analyst/blob/master/CPB100/lab4c/mlapis.ipynb).\n",
     "\n",
     "First, visit <a href=\"http://console.cloud.google.com/apis\">API console</a>, choose \"Credentials\" on the left-hand menu.  Choose \"Create Credentials\" and generate an API key for your application. You should probably restrict it by IP address to prevent abuse, but for now, just  leave that field blank and delete the API key after trying out this demo.\n",
     "\n",
@@ -20,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 88,
    "metadata": {
     "collapsed": false
    },
@@ -52,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 89,
    "metadata": {
     "collapsed": false
    },
@@ -62,24 +64,24 @@
      "output_type": "stream",
      "text": [
       "Requirement already up-to-date: pip in /usr/local/envs/py3env/lib/python3.5/site-packages (10.0.1)\n",
-      "\u001b[31mproto-google-cloud-error-reporting-v1beta1 0.15.3 has requirement oauth2client<4.0dev,>=2.0.0, but you'll have oauth2client 4.1.2 which is incompatible.\u001b[0m\n",
-      "\u001b[31mgoogle-cloud-bigquery 0.28.0 has requirement requests>=2.18.0, but you'll have requests 2.9.1 which is incompatible.\u001b[0m\n",
-      "\u001b[31mgoogle-cloud-spanner 0.29.0 has requirement requests<3.0dev,>=2.18.4, but you'll have requests 2.9.1 which is incompatible.\u001b[0m\n",
+      "\u001b[31mgoogle-cloud-storage 1.6.0 has requirement requests>=2.18.0, but you'll have requests 2.9.1 which is incompatible.\u001b[0m\n",
+      "\u001b[31mgapic-google-cloud-error-reporting-v1beta1 0.15.3 has requirement oauth2client<4.0dev,>=2.0.0, but you'll have oauth2client 4.1.2 which is incompatible.\u001b[0m\n",
+      "\u001b[31mgoogle-cloud-pubsub 0.29.4 has requirement psutil<6.0dev,>=5.2.2, but you'll have psutil 4.3.0 which is incompatible.\u001b[0m\n",
       "\u001b[31mgapic-google-cloud-datastore-v1 0.15.3 has requirement oauth2client<4.0dev,>=2.0.0, but you'll have oauth2client 4.1.2 which is incompatible.\u001b[0m\n",
-      "\u001b[31mproto-google-cloud-datastore-v1 0.90.4 has requirement oauth2client<4.0dev,>=2.0.0, but you'll have oauth2client 4.1.2 which is incompatible.\u001b[0m\n",
+      "\u001b[31mproto-google-cloud-error-reporting-v1beta1 0.15.3 has requirement oauth2client<4.0dev,>=2.0.0, but you'll have oauth2client 4.1.2 which is incompatible.\u001b[0m\n",
+      "\u001b[31mgoogle-cloud-spanner 0.29.0 has requirement requests<3.0dev,>=2.18.4, but you'll have requests 2.9.1 which is incompatible.\u001b[0m\n",
+      "\u001b[31mgoogle-gax 0.15.16 has requirement requests<3.0dev,>=2.13.0, but you'll have requests 2.9.1 which is incompatible.\u001b[0m\n",
+      "\u001b[31mgoogle-cloud-bigquery 0.28.0 has requirement requests>=2.18.0, but you'll have requests 2.9.1 which is incompatible.\u001b[0m\n",
       "\u001b[31mdatalab 1.1.2 has requirement google-api-python-client==1.6.2, but you'll have google-api-python-client 1.6.6 which is incompatible.\u001b[0m\n",
       "\u001b[31mdatalab 1.1.2 has requirement httplib2==0.10.3, but you'll have httplib2 0.11.3 which is incompatible.\u001b[0m\n",
       "\u001b[31mdatalab 1.1.2 has requirement oauth2client==2.2.0, but you'll have oauth2client 4.1.2 which is incompatible.\u001b[0m\n",
       "\u001b[31mdatalab 1.1.2 has requirement six==1.10.0, but you'll have six 1.11.0 which is incompatible.\u001b[0m\n",
-      "\u001b[31mproto-google-cloud-logging-v2 0.91.3 has requirement oauth2client<4.0dev,>=2.0.0, but you'll have oauth2client 4.1.2 which is incompatible.\u001b[0m\n",
+      "\u001b[31mgapic-google-cloud-logging-v2 0.91.3 has requirement oauth2client<4.0dev,>=2.0.0, but you'll have oauth2client 4.1.2 which is incompatible.\u001b[0m\n",
+      "\u001b[31mproto-google-cloud-datastore-v1 0.90.4 has requirement oauth2client<4.0dev,>=2.0.0, but you'll have oauth2client 4.1.2 which is incompatible.\u001b[0m\n",
       "\u001b[31mtensorflow-tensorboard 1.5.1 has requirement bleach==1.5.0, but you'll have bleach 2.1.2 which is incompatible.\u001b[0m\n",
       "\u001b[31mtensorflow-tensorboard 1.5.1 has requirement html5lib==0.9999999, but you'll have html5lib 1.0.1 which is incompatible.\u001b[0m\n",
-      "\u001b[31mgoogle-gax 0.15.16 has requirement requests<3.0dev,>=2.13.0, but you'll have requests 2.9.1 which is incompatible.\u001b[0m\n",
-      "\u001b[31mgapic-google-cloud-logging-v2 0.91.3 has requirement oauth2client<4.0dev,>=2.0.0, but you'll have oauth2client 4.1.2 which is incompatible.\u001b[0m\n",
-      "\u001b[31mgoogle-cloud-storage 1.6.0 has requirement requests>=2.18.0, but you'll have requests 2.9.1 which is incompatible.\u001b[0m\n",
-      "\u001b[31mgapic-google-cloud-error-reporting-v1beta1 0.15.3 has requirement oauth2client<4.0dev,>=2.0.0, but you'll have oauth2client 4.1.2 which is incompatible.\u001b[0m\n",
-      "\u001b[31mgoogle-cloud-pubsub 0.29.4 has requirement psutil<6.0dev,>=5.2.2, but you'll have psutil 4.3.0 which is incompatible.\u001b[0m\n",
-      "\u001b[31mgoogle-api-core 0.1.4 has requirement requests<3.0.0dev,>=2.18.0, but you'll have requests 2.9.1 which is incompatible.\u001b[0m\n"
+      "\u001b[31mgoogle-api-core 0.1.4 has requirement requests<3.0.0dev,>=2.18.0, but you'll have requests 2.9.1 which is incompatible.\u001b[0m\n",
+      "\u001b[31mproto-google-cloud-logging-v2 0.91.3 has requirement oauth2client<4.0dev,>=2.0.0, but you'll have oauth2client 4.1.2 which is incompatible.\u001b[0m\n"
      ]
     }
    ],
@@ -89,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 90,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -101,31 +103,31 @@
      "output_type": "stream",
      "text": [
       "Requirement already up-to-date: google-api-python-client in /usr/local/envs/py3env/lib/python3.5/site-packages (1.6.6)\n",
-      "Requirement not upgraded as not directly required: oauth2client<5.0.0dev,>=1.5.0 in /usr/local/envs/py3env/lib/python3.5/site-packages (from google-api-python-client) (4.1.2)\n",
-      "Requirement not upgraded as not directly required: six<2dev,>=1.6.1 in /usr/local/envs/py3env/lib/python3.5/site-packages (from google-api-python-client) (1.11.0)\n",
       "Requirement not upgraded as not directly required: httplib2<1dev,>=0.9.2 in /usr/local/envs/py3env/lib/python3.5/site-packages (from google-api-python-client) (0.11.3)\n",
       "Requirement not upgraded as not directly required: uritemplate<4dev,>=3.0.0 in /usr/local/envs/py3env/lib/python3.5/site-packages/uritemplate-3.0.0-py3.5.egg (from google-api-python-client) (3.0.0)\n",
+      "Requirement not upgraded as not directly required: six<2dev,>=1.6.1 in /usr/local/envs/py3env/lib/python3.5/site-packages (from google-api-python-client) (1.11.0)\n",
+      "Requirement not upgraded as not directly required: oauth2client<5.0.0dev,>=1.5.0 in /usr/local/envs/py3env/lib/python3.5/site-packages (from google-api-python-client) (4.1.2)\n",
       "Requirement not upgraded as not directly required: pyasn1-modules>=0.0.5 in /usr/local/envs/py3env/lib/python3.5/site-packages (from oauth2client<5.0.0dev,>=1.5.0->google-api-python-client) (0.2.1)\n",
-      "Requirement not upgraded as not directly required: pyasn1>=0.1.7 in /usr/local/envs/py3env/lib/python3.5/site-packages (from oauth2client<5.0.0dev,>=1.5.0->google-api-python-client) (0.4.2)\n",
       "Requirement not upgraded as not directly required: rsa>=3.1.4 in /usr/local/envs/py3env/lib/python3.5/site-packages (from oauth2client<5.0.0dev,>=1.5.0->google-api-python-client) (3.4.2)\n",
-      "\u001b[31mgapic-google-cloud-error-reporting-v1beta1 0.15.3 has requirement oauth2client<4.0dev,>=2.0.0, but you'll have oauth2client 4.1.2 which is incompatible.\u001b[0m\n",
-      "\u001b[31mgoogle-gax 0.15.16 has requirement requests<3.0dev,>=2.13.0, but you'll have requests 2.9.1 which is incompatible.\u001b[0m\n",
-      "\u001b[31mgoogle-cloud-storage 1.6.0 has requirement requests>=2.18.0, but you'll have requests 2.9.1 which is incompatible.\u001b[0m\n",
-      "\u001b[31mgoogle-api-core 0.1.4 has requirement requests<3.0.0dev,>=2.18.0, but you'll have requests 2.9.1 which is incompatible.\u001b[0m\n",
-      "\u001b[31mproto-google-cloud-error-reporting-v1beta1 0.15.3 has requirement oauth2client<4.0dev,>=2.0.0, but you'll have oauth2client 4.1.2 which is incompatible.\u001b[0m\n",
-      "\u001b[31mgapic-google-cloud-logging-v2 0.91.3 has requirement oauth2client<4.0dev,>=2.0.0, but you'll have oauth2client 4.1.2 which is incompatible.\u001b[0m\n",
-      "\u001b[31mgoogle-cloud-spanner 0.29.0 has requirement requests<3.0dev,>=2.18.4, but you'll have requests 2.9.1 which is incompatible.\u001b[0m\n",
-      "\u001b[31mgapic-google-cloud-datastore-v1 0.15.3 has requirement oauth2client<4.0dev,>=2.0.0, but you'll have oauth2client 4.1.2 which is incompatible.\u001b[0m\n",
+      "Requirement not upgraded as not directly required: pyasn1>=0.1.7 in /usr/local/envs/py3env/lib/python3.5/site-packages (from oauth2client<5.0.0dev,>=1.5.0->google-api-python-client) (0.4.2)\n",
       "\u001b[31mproto-google-cloud-datastore-v1 0.90.4 has requirement oauth2client<4.0dev,>=2.0.0, but you'll have oauth2client 4.1.2 which is incompatible.\u001b[0m\n",
-      "\u001b[31mgoogle-cloud-bigquery 0.28.0 has requirement requests>=2.18.0, but you'll have requests 2.9.1 which is incompatible.\u001b[0m\n",
+      "\u001b[31mgoogle-cloud-spanner 0.29.0 has requirement requests<3.0dev,>=2.18.4, but you'll have requests 2.9.1 which is incompatible.\u001b[0m\n",
       "\u001b[31mproto-google-cloud-logging-v2 0.91.3 has requirement oauth2client<4.0dev,>=2.0.0, but you'll have oauth2client 4.1.2 which is incompatible.\u001b[0m\n",
+      "\u001b[31mtensorflow-tensorboard 1.5.1 has requirement bleach==1.5.0, but you'll have bleach 2.1.2 which is incompatible.\u001b[0m\n",
+      "\u001b[31mtensorflow-tensorboard 1.5.1 has requirement html5lib==0.9999999, but you'll have html5lib 1.0.1 which is incompatible.\u001b[0m\n",
+      "\u001b[31mgapic-google-cloud-logging-v2 0.91.3 has requirement oauth2client<4.0dev,>=2.0.0, but you'll have oauth2client 4.1.2 which is incompatible.\u001b[0m\n",
       "\u001b[31mdatalab 1.1.2 has requirement google-api-python-client==1.6.2, but you'll have google-api-python-client 1.6.6 which is incompatible.\u001b[0m\n",
       "\u001b[31mdatalab 1.1.2 has requirement httplib2==0.10.3, but you'll have httplib2 0.11.3 which is incompatible.\u001b[0m\n",
       "\u001b[31mdatalab 1.1.2 has requirement oauth2client==2.2.0, but you'll have oauth2client 4.1.2 which is incompatible.\u001b[0m\n",
       "\u001b[31mdatalab 1.1.2 has requirement six==1.10.0, but you'll have six 1.11.0 which is incompatible.\u001b[0m\n",
-      "\u001b[31mtensorflow-tensorboard 1.5.1 has requirement bleach==1.5.0, but you'll have bleach 2.1.2 which is incompatible.\u001b[0m\n",
-      "\u001b[31mtensorflow-tensorboard 1.5.1 has requirement html5lib==0.9999999, but you'll have html5lib 1.0.1 which is incompatible.\u001b[0m\n",
-      "\u001b[31mgoogle-cloud-pubsub 0.29.4 has requirement psutil<6.0dev,>=5.2.2, but you'll have psutil 4.3.0 which is incompatible.\u001b[0m\n"
+      "\u001b[31mproto-google-cloud-error-reporting-v1beta1 0.15.3 has requirement oauth2client<4.0dev,>=2.0.0, but you'll have oauth2client 4.1.2 which is incompatible.\u001b[0m\n",
+      "\u001b[31mgoogle-cloud-pubsub 0.29.4 has requirement psutil<6.0dev,>=5.2.2, but you'll have psutil 4.3.0 which is incompatible.\u001b[0m\n",
+      "\u001b[31mgoogle-cloud-bigquery 0.28.0 has requirement requests>=2.18.0, but you'll have requests 2.9.1 which is incompatible.\u001b[0m\n",
+      "\u001b[31mgoogle-api-core 0.1.4 has requirement requests<3.0.0dev,>=2.18.0, but you'll have requests 2.9.1 which is incompatible.\u001b[0m\n",
+      "\u001b[31mgoogle-cloud-storage 1.6.0 has requirement requests>=2.18.0, but you'll have requests 2.9.1 which is incompatible.\u001b[0m\n",
+      "\u001b[31mgapic-google-cloud-datastore-v1 0.15.3 has requirement oauth2client<4.0dev,>=2.0.0, but you'll have oauth2client 4.1.2 which is incompatible.\u001b[0m\n",
+      "\u001b[31mgapic-google-cloud-error-reporting-v1beta1 0.15.3 has requirement oauth2client<4.0dev,>=2.0.0, but you'll have oauth2client 4.1.2 which is incompatible.\u001b[0m\n",
+      "\u001b[31mgoogle-gax 0.15.16 has requirement requests<3.0dev,>=2.13.0, but you'll have requests 2.9.1 which is incompatible.\u001b[0m\n"
      ]
     }
    ],
@@ -149,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 91,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -188,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 92,
    "metadata": {
     "collapsed": false
    },
@@ -224,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 93,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -263,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 94,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -294,12 +296,14 @@
     "editable": true
    },
    "source": [
-    "## Translate sign"
+    "## Translate sign\n",
+    "\n",
+    "I don't read Chinese - what does it say.  Let's run it through the translator."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 95,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -337,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 96,
    "metadata": {
     "collapsed": false
    },
@@ -393,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 97,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -447,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 98,
    "metadata": {
     "collapsed": false
    },
@@ -498,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 99,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -530,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 100,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -593,7 +597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 101,
    "metadata": {
     "collapsed": false
    },
@@ -656,7 +660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 102,
    "metadata": {
     "collapsed": false
    },
@@ -685,7 +689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 103,
    "metadata": {
     "collapsed": false
    },
