Update with PDF extraction

--- a/GCP_mlapis.ipynb
+++ b/GCP_mlapis.ipynb
@@ -13,7 +13,7 @@
     "\n",
     "First, visit <a href=\"http://console.cloud.google.com/apis\">API console</a>, choose \"Credentials\" on the left-hand menu.  Choose \"Create Credentials\" and generate an API key for your application. You should probably restrict it by IP address to prevent abuse, but for now, just  leave that field blank and delete the API key after trying out this demo.\n",
     "\n",
-    "I am hiding my key in a file which will not be seen in gitup.  What you need to do is replace my code below with:\n",
+    "I am hiding my key in a file which will not be seen in github.  What you need to do is replace my code below with:\n",
     "```\n",
     "APIKEY=\"xxxxxxxxxxxxxxxxxxxxxxxxxxx\"  # Replace with your API key\n",
     "```\n",
@@ -22,9 +22,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 2,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -56,7 +58,9 @@
    "cell_type": "code",
    "execution_count": 89,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -183,7 +187,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "That is really cool - how would a Gallego (a person from Galicia in the Northwest corner of Spain) say it?"
    ]
@@ -192,7 +199,9 @@
    "cell_type": "code",
    "execution_count": 92,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -331,7 +340,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## More OCR with the Vision API\n",
     "OCR intrigues me - it is actually quite difficult to do well and there are engines like Tesseract that aren't too bad.  So I want to try the engine with a POST and see if it can extract some English for me, but on a very difficult sign (text with skew):\n",
@@ -343,7 +355,9 @@
    "cell_type": "code",
    "execution_count": 96,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -376,11 +390,53 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "<img src=\"https://get.pxhere.com/photo/road-highway-advertising-travel-sign-community-usa-landmark-street-sign-attraction-historic-tourism-signage-road-sign-illinois-history-66-traffic-sign-route-66-mother-road-odell-644464.jpg\" width=600>\n",
     "\n",
     "Checking the end of the text with the sign - how did we do?  We missed one full line of text - so OCR still remains a difficult text, even for Google!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### PDF Document Translation\n",
+    "\n",
+    "The OCR above works in general on images.  However, there also is a service which operates on PDF documents - as they [say](https://cloud.google.com/vision/docs/ocr), small dense text.\n",
+    "\n",
+    "Let's try this page from the writings of everybody's favorite fat king eating turkey legs and screaming out \"Call the Executioner\" - King Henry the VIII:\n",
+    "![](https://storage.googleapis.com/scoobie_earthquakes/HenryVII_863arabic_0202.jpg)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "IMAGE=\"gs://scoobie_earthquakes/HenryVII_863arabic_0202.jpg\"\n",
+    "vservice = build('vision', 'v1', developerKey=APIKEY)\n",
+    "request = vservice.images().annotate(body={\n",
+    "        'requests': [{\n",
+    "                'image': {\n",
+    "                    'source': {\n",
+    "                        'gcs_image_uri': IMAGE\n",
+    "                    }\n",
+    "                },\n",
+    "                'features': [{\n",
+    "                    'type': 'DOCUMENT_TEXT_DETECTION',\n",
+    "                    'maxResults': 5,\n",
+    "                }]\n",
+    "            }],\n",
+    "        })\n",
+    "responses = request.execute(num_retries=5)\n",
+    "print(responses)"
    ]
   },
   {
@@ -442,7 +498,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "In a [paper](https://arxiv.org/pdf/1010.3003.pdf) published in 2010 by Bollen et al, it was claimed that there was 87% correlation between tweets and the stock market.  In January 2013, the following *false* tweet was sent which [momentarily sent Serepta Therapeutics falling](http://fortune.com/2015/12/07/dataminr-hedge-funds-twitter-data/), but when investors realized the ruse, it quickly recovered.  Let's process the [tweet](http://kiddynamitesworld.com/the-sec-needs-to-arrest-some-people/).\n",
     "\n",
@@ -453,7 +512,9 @@
    "cell_type": "code",
    "execution_count": 98,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -483,7 +544,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "And we see that this *is* a very negative statement - no wonder it impacted the market as Forbes relates."
    ]
@@ -599,7 +663,9 @@
    "cell_type": "code",
    "execution_count": 101,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -631,7 +697,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "As a matter of interest - we can crop to the face with the following code:\n",
     "```\n",
@@ -662,7 +731,9 @@
    "cell_type": "code",
    "execution_count": 102,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -680,7 +751,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "<img src=\"https://raw.githubusercontent.com/jeffreyrnorton/Notebooks_MachineLearning/master/images/14295.jpg\" width=400>\n",
     "\n",
@@ -691,7 +765,9 @@
    "cell_type": "code",
    "execution_count": 103,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -730,7 +806,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "<img src=\"https://raw.githubusercontent.com/jeffreyrnorton/Notebooks_MachineLearning/master/images/15091.jpg\" width=400>"
    ]
